tests/syntax/good/testfile-generics-3.rs


fn f<T : >(x : T) -> T {
    x
}

fn main() {
    let x = f(3);
}