tests/syntax/bad/testfile-constant-1.rs


const T = 3usize;


fn main() {
    let x = if T == 3 {
        1
    } else {
        0
    };
}